<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/welcomeUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutFirstRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="Hoş geldin " />

    <LinearLayout
        android:id="@+id/linearLayoutFirstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/newQuestionButton"
            style="@style/BlueWhiteButtonWithBlueBorder"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mainActivityButtonClicks"
            android:text="@string/add_question"
            android:textSize="18sp" />

        <Button
            android:id="@+id/getQuestionsButton"
            style="@style/BlueWhiteButtonWithBlueBorder"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mainActivityButtonClicks"
            android:text="@string/get_question"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSecondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutFirstRow"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/createExamButton"
            style="@style/BlueWhiteButtonWithBlueBorder"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mainActivityButtonClicks"
            android:text="@string/create_exam"
            android:textSize="18sp" />

        <Button
            android:id="@+id/examSettingsButton"
            style="@style/BlueWhiteButtonWithBlueBorder"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mainActivityButtonClicks"
            android:text="@string/exam_settings"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/logOutButton"
        style="@style/BlueWhiteButtonWithBlueBorder"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/logOut"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/versionInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/versionInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="denemeee" />

</androidx.constraintlayout.widget.ConstraintLayout>