<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <LinearLayout
        android:id="@+id/toolbarContainerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backButtonImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:onClick="examSettingsActivityButtonClicks"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/createAndEditQuestionTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="3"
            android:text="@string/exam_settings"
            android:textColor="@color/title_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/examTimeContainerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edittext"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainerLinearLayout"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/examTime"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@null"
            android:hint="@string/exam_time"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/examQuestionPointsContainerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edittext"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/examTimeContainerLinearLayout"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/examQuestionPoints"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@null"
            android:hint="@string/question_points"
            android:padding="4dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/difficultlyContainerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/examQuestionPointsContainerLinearLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/difficultlyTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/difficultly" />

        <SeekBar
            android:id="@+id/selectDifficultlySeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="5"
            android:min="1" />

        <TextView
            android:id="@+id/difficultlyValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="1" />
    </LinearLayout>

    <Button
        android:id="@+id/saveExamSettingsButton"
        android:onClick="examSettingsActivityButtonClicks"
        style="@style/BlueWhiteButtonWithBlueBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/difficultlyContainerLinearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>