<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbarContainerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backButtonImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_weight="0.2"
            android:onClick="createExamActivityButtonClicks"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="3"
            android:text="@string/create_exam"
            android:textColor="@color/title_text_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/settingsImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="12dp"
            android:layout_weight="0.2"
            android:onClick="createExamActivityButtonClicks"
            android:src="@drawable/ic_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/createExamButton"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainerLinearLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/createExamRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="MissingConstraints"
            tools:listitem="@layout/row_question_recycler" />

        <TextView
            android:id="@+id/emptyStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/list_empty_state"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/createExamButton"
        style="@style/BlueWhiteButtonWithBlueBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:onClick="createExamActivityButtonClicks"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>