<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/linearLayoutQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/bgBlueButtonColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/optA"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:text="@string/question_optA"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/optATextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Cevap A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/optB"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:text="@string/question_optB"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/optBTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Cevap B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/optC"
                android:layout_width="30dip"
                android:layout_height="match_parent"
                android:text="@string/question_optC"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/optCTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Cevap C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/optD"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:text="@string/question_optD"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/optDTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Cevap D" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/correct_answer"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editQuestionImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_edit"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/deleteQuestionsImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_delete"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>